--- a/deploy/.env.example
+++ b/deploy/.env.example
@@ -1,12 +1,14 @@
 # MySQL配置
-MYSQL_ROOT_PASSWORD=root123456
-MYSQL_DATABASE=weixin
-MYSQL_USER=weixin
-MYSQL_PASSWORD=123456
+MYSQL_HOST=47.106.217.116
 MYSQL_PORT=3306
+MYSQL_DATABASE=weixin
+MYSQL_USER=admin
+MYSQL_PASSWORD=Wy1997@Kakarot
 
 # Redis配置
-REDIS_PASSWORD=123456
+REDIS_PASSWORD=Wy1997@Kakarot
+REDIS_DB=0
+REDIS_HOST=47.106.217.116
 REDIS_PORT=6379
 
 # WeChat Pad Pro配置
