--- a/deploy/.env
+++ b/deploy/.env
@@ -18,3 +18,6 @@ REDIS_PASSWORD=Wy1997@Kakarot
 DEBUG=false
 HOST=0.0.0.0
 PORT=1238
+ADMIN_KEY=A7x9B2m8E5q3F6n1K4p7L9r2S8w5T1u6
+WEB_DOMAIN=47.106.217.116:1238
+TZ=Asia/Shanghai
