--- a/deploy/.env
+++ b/deploy/.env
@@ -4,7 +4,7 @@ WECHAT_PORT=8081
 # 数据库配置
 DB_HOST=47.106.217.116
 DB_PORT=3306
-DB_DATABASE=weixin
+DB_DATABASE=wechat
 DB_USERNAME=admin
 DB_PASSWORD=Wy1997@Kakarot
 
@@ -18,6 +18,6 @@ REDIS_PASSWORD=Wy1997@Kakarot
 DEBUG=false
 HOST=0.0.0.0
 PORT=1238
-ADMIN_KEY=A7x9B2m8E5q3F6n1K4p7L9r2S8w5T1u6
-WEB_DOMAIN=47.106.217.116:1238
+ADMIN_KEY=Wy1997@Kakarot
+WEB_DOMAIN=108.160.135.74:1238
 TZ=Asia/Shanghai
