--- a/deploy/.env
+++ b/deploy/.env
@@ -7,12 +7,22 @@ DB_PORT=3306
 DB_DATABASE=wechat
 DB_USERNAME=admin
 DB_PASSWORD=Wy1997@Kakarot
+MYSQL_CONNECT_STR=admin:Wy1997@Kakarot@tcp(47.106.217.116:3306)/wechat?charset=utf8mb4&parseTime=true&loc=Local 
+
 
 # Redis配置
 REDIS_HOST=47.106.217.116
 REDIS_PORT=6379
 REDIS_DB=0
 REDIS_PASSWORD=Wy1997@Kakarot
+REDIS_PASS=Wy1997@Kakarot
+REDIS_MAX_IDLE=30
+REDIS_MAX_ACTIVE=100
+REDIS_IDLE_TIMEOUT=5000
+REDIS_MAX_CONN_LIFETIME=3600
+REDIS_CONNECT_TIMEOUT=5000
+REDIS_READ_TIMEOUT=10000
+REDIS_WRITE_TIMEOUT=10000
 
 # 其他核心配置
 DEBUG=false
