--- a/deploy/.env
+++ b/deploy/.env
@@ -1,5 +1,10 @@
+# ==========================================
+# WeChat Pad Pro 云服务器配置文件
+# ==========================================
+
 # WeChat Pad Pro 主要配置
 WECHAT_PORT=8081
+WECHAT_TAG=latest
 
 # 数据库配置
 DB_HOST=47.106.217.116
@@ -7,8 +12,7 @@ DB_PORT=3306
 DB_DATABASE=wechat
 DB_USERNAME=admin
 DB_PASSWORD=Wy1997@Kakarot
-MYSQL_CONNECT_STR=admin:Wy1997@Kakarot@tcp(47.106.217.116:3306)/wechat?charset=utf8mb4&parseTime=true&loc=Local 
-
+MYSQL_CONNECT_STR=admin:Wy1997@Kakarot@tcp(47.106.217.116:3306)/wechat?charset=utf8mb4&parseTime=true&loc=Local
 
 # Redis配置
 REDIS_HOST=47.106.217.116
@@ -28,6 +32,76 @@ REDIS_WRITE_TIMEOUT=10000
 DEBUG=false
 HOST=0.0.0.0
 PORT=1238
+
+# ==========================================
+# 【重要】安全配置
+# ==========================================
+# 管理员密钥
 ADMIN_KEY=Wy1997@Kakarot
-WEB_DOMAIN=108.160.135.74:1238
+
+# API版本前缀（如 /v1, /v2）
+API_VERSION=
+
+# MCP服务端口（用于AI大模型集成服务）
+MCP_PORT=8099
+
+# 推广公众号微信ID（用于新用户首次登录时推广）
+GH_WXID=
+
+# ==========================================
+# 应用配置
+# ==========================================
 TZ=Asia/Shanghai
+WORKER_POOL_SIZE=500
+MAX_WORKER_TASK_LEN=1000
+
+# Web域名配置
+WEB_DOMAIN=108.160.135.74:1238
+
+WEB_TASK_NAME=
+WEB_TASK_APP_NUMBER=
+NEWS_SYN_WXID=true
+DT=true
+
+# ==========================================
+# 任务配置
+# ==========================================
+TASK_RETRY_COUNT=3
+TASK_RETRY_INTERVAL=5
+HEARTBEAT_INTERVAL=25
+AUTO_AUTH_INTERVAL=30
+AUTO_SYNC_INTERVAL_MINUTES=30
+TASK_EXEC_WAIT_TIMES=500
+QUEUE_EXPIRE_TIME=86400
+
+# ==========================================
+# WebSocket配置
+# ==========================================
+WS_HANDSHAKE_TIMEOUT=10
+WS_READ_BUFFER_SIZE=4096
+WS_WRITE_BUFFER_SIZE=4096
+WS_READ_DEADLINE=120
+WS_WRITE_DEADLINE=60
+WS_PING_INTERVAL=25
+WS_CONNECTION_CHECK_INTERVAL=45
+WS_MAX_MESSAGE_SIZE=8192
+
+# ==========================================
+# 消息队列配置（可选，根据需要启用）
+# ==========================================
+TOPIC=wx_sync_msg_topic
+ROCKET_MQ_ENABLED=false
+ROCKET_MQ_HOST=127.0.0.1:9876
+ROCKET_ACCESS_KEY=123
+ROCKET_SECRET_KEY=123!#@13$
+RABBIT_MQ_ENABLED=false
+RABBIT_MQ_URL=amqp://yunkong:123456@127.0.0.1:5672/
+KAFKA_ENABLED=false
+KAFKA_URL=
+KAFKA_USERNAME=
+KAFKA_PASSWORD=
+
+# ==========================================
+# 其他配置
+# ==========================================
+DISABLED_CMD_LIST=
