--- a/deploy/.env
+++ b/deploy/.env
@@ -37,10 +37,10 @@ PORT=1238
 # 【重要】安全配置
 # ==========================================
 # 管理员密钥
-ADMIN_KEY=Wy1997@Kakarot
+ADMIN_KEY=Trunks820_WeChatPadPro_2025
 
 # API版本前缀（如 /v1, /v2）
-API_VERSION=
+API_VERSION=/v1
 
 # MCP服务端口（用于AI大模型集成服务）
 MCP_PORT=8099
