--- a/deploy/.env
+++ b/deploy/.env
@@ -40,7 +40,7 @@ PORT=1238
 ADMIN_KEY=Trunks820_WeChatPadPro_2025
 
 # API版本前缀（如 /v1, /v2）
-API_VERSION=/v1
+API_VERSION=/wechat
 
 # MCP服务端口（用于AI大模型集成服务）
 MCP_PORT=8099
